doc-surrealdb_versioned_docs/version-2.x/surrealql/statements/return.mdx
---
sidebar_position: 18
sidebar_label: RETURN
title: RETURN statement | SurrealQL
description: The RETURN statement can be used to return a value or the result of a query, and to set the return value for a transaction, block or function.
---

# `RETURN` statement

The `RETURN` statement can be used to return a value or the result of a query, and to set the return value for a transaction or function.

### Statement syntax

```surql title="SurrealQL Syntax"
RETURN @value
```

## Example usage
### Basic usage

The `RETURN` statement can return anything from simple values to the result of queries.

```surql
-- Return a simple value
RETURN 123;
RETURN "I am a string!";
RETURN {
	prop: "value"
};

-- Return the result of a query
RETURN SELECT * FROM person;
RETURN (CREATE person).id;
```

## Transaction return value

`RETURN` statements can set the result of any transaction. This includes transactions, blocks and functions.

```surql title="Transaction return value"
BEGIN TRANSACTION;

-- We are executing quite a few queries here
LET $firstname = "John";
LET $lastname = "Doe";

LET $person = CREATE person CONTENT {
	firstname: $firstname,
	lastname: $lastname,
}

-- But because we end with a RETURN query, only the person's ID will be returned
-- The results of the other queries will be omitted.
RETURN $person.id;

-- One issue with this approach is that query errors are generic.
-- To get around that, use a block, which is executed as a transaction by itself.

COMMIT TRANSACTION;
```

```surql title="Function return value"
DEFINE FUNCTION fn::person::create($firstname: string, $lastname: string) {
	LET $person = CREATE person CONTENT {
		firstname: $firstname,
		lastname: $lastname,
	}

	-- The RETURN statement will set the return value of the custom function, and further queries will not be executed.
	RETURN $person.id;
};
```

## Return breaks execution
Opposite to [`RETURN` in SurrealDB 1.x](/docs/surrealdb/surrealql/statements/return#return-does-not-break), `RETURN` now breaks execution of statements, functions and transactions.

```surql title="Functions"
DEFINE FUNCTION fn::round::up($num: number) {
    IF $num % 2 == 0 {
        RETURN $num; -- Breaks execution for the function
    };

    -- This is only executed if the RETURN inside the IF statement did not break execution
    RETURN $num + 1;
};
```

```surql title="Transactions"
BEGIN;
RETURN 1; -- I am executed
CREATE a; -- I am not executed
RETURN 2; -- I am not executed
COMMIT;
```

Lastly, if not executed inside a transaction or function, `RETURN` will break execution until the most top-level statement it is executed in. RETURN will **not** prevent top level statements from being executed, nor will it adjust their output.
```surql title="Statements"
LET $id = 123;
LET $id = {
    IF $id {
        RETURN type::thing('table', $id);
    };

    RETURN table:rand();
};

-- This still executes. The `RETURN` statement only broke until the block in the variable assignment.
CREATE $id;
```
